html modified, inline css added

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                           <table border="0" cellpadding="0" cellspacing="0" class="image_block" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
                             <tr>
                               <td style="padding-bottom:25px;padding-left:20px;padding-right:20px;padding-top:25px;width:100%;">
-                                <div style="line-height:10px"><a href="#" style="outline:none" tabindex="-1" target="_blank"><img alt="Your Logo" src="images/yourlogo.png" style="display: block; height: auto; border: 0; width: 162px; max-width: 100%;" title="Logo" width="162" /></a></div>
+                                <div style="line-height:10px"><a href="#" style="outline:none" tabindex="-1"><img alt="Your Logo" src="https://i.ibb.co/WxCPGx2/yourlogo.png" style="display: block; height: auto; border: 0; width: 162px; max-width: 100%;" title="Logo" width="162" /></a></div>
                               </td>
                             </tr>
                           </table>
@@ -144,7 +144,7 @@
                           <table border="0" cellpadding="0" cellspacing="0" class="image_block" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
                             <tr>
                               <td style="width:100%;padding-right:0px;padding-left:0px;padding-top:5px;padding-bottom:5px;">
-                                <div align="center" style="line-height:10px"><img alt="Happy Woman" src="images/header-img.png" style="display: block; height: auto; border: 0; width: 385px; max-width: 100%;" title="Happy Woman" width="385" /></div>
+                                <div align="center" style="line-height:10px"><img alt="" src="https://i.ibb.co/1bPh0kK/header-img.png" style="display: block; height: auto; border: 0; width: 385px; max-width: 100%;" title="Header Img" width="385" /></div>
                               </td>
                             </tr>
                           </table>
@@ -279,7 +279,7 @@
                                       <table cellpadding="0" cellspacing="0" class="icons-inner" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; display: inline-block; margin-right: -4px; padding-left: 0px; padding-right: 0px;">
                                         <!--<![endif]-->
                                         <tr>
-                                          <td style="vertical-align: middle; text-align: center; padding-top: 15px; padding-bottom: 15px; padding-left: 15px; padding-right: 15px;"><img align="center" alt="Lorem ipsum dolor" class="icon" height="32" src="images/icon_2.png" style="display: block; height: auto; margin: 0 auto; border: 0;" width="32" /></td>
+                                          <td style="vertical-align: middle; text-align: center; padding-top: 15px; padding-bottom: 15px; padding-left: 15px; padding-right: 15px;"><img align="center" class="icon" height="32" src="https://i.ibb.co/9tZxWCD/icon-2.png" alt="icon-2" style="display: block; height: auto; margin: 0 auto; border: 0;" width="32" /></td>
                                           <td style="font-family: 'Roboto', sans-serif; font-size: 14px; color: #ffffff; vertical-align: middle; letter-spacing: undefined; text-align: left;">First Item</td>
                                         </tr>
                                       </table>
@@ -342,7 +342,7 @@
                                       <table cellpadding="0" cellspacing="0" class="icons-inner" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; display: inline-block; margin-right: -4px; padding-left: 0px; padding-right: 0px;">
                                         <!--<![endif]-->
                                         <tr>
-                                          <td style="vertical-align: middle; text-align: center; padding-top: 15px; padding-bottom: 15px; padding-left: 15px; padding-right: 15px;"><img align="center" alt="Lorem ipsum dolor" class="icon" height="32" src="images/icon_1.png" style="display: block; height: auto; margin: 0 auto; border: 0;" width="32" /></td>
+                                          <td style="vertical-align: middle; text-align: center; padding-top: 15px; padding-bottom: 15px; padding-left: 15px; padding-right: 15px;"><img align="center" class="icon" height="32" src="https://i.ibb.co/3s9cbcS/icon-1.png" alt="icon-1" style="display: block; height: auto; margin: 0 auto; border: 0;" width="32" /></td>
                                           <td style="font-family: 'Roboto', sans-serif; font-size: 14px; color: #ffffff; vertical-align: middle; letter-spacing: undefined; text-align: left;">Second Item</td>
                                         </tr>
                                       </table>
@@ -522,7 +522,7 @@
                           <table border="0" cellpadding="0" cellspacing="0" class="image_block" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
                             <tr>
                               <td style="padding-bottom:20px;padding-left:10px;padding-right:10px;padding-top:20px;width:100%;">
-                                <div align="center" style="line-height:10px"><img alt="Alternate text" src="images/border.png" style="display: block; height: auto; border: 0; width: 120px; max-width: 100%;" title="Alternate text" width="120" /></div>
+                                <div align="center" style="line-height:10px"><img alt="Border" src="https://i.ibb.co/m9mxHtP/border.png" style="display: block; height: auto; border: 0; width: 120px; max-width: 100%;" title="Border" width="120" /></div>
                               </td>
                             </tr>
                           </table>
@@ -541,7 +541,7 @@
                             <tr>
                               <td>
                                 <div align="center">
-                                  <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="#" style="height:44px;width:178px;v-text-anchor:middle;" arcsize="82%" strokeweight="0.75pt" strokecolor="#FFFFFF" fill="false"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:'Roboto', sans-serif; font-size:14px"><![endif]--><a href="#" style="text-decoration:none;display:inline-block;color:#ffffff;background-color:transparent;border-radius:36px;width:auto;border-top:1px solid #FFFFFF;font-weight:undefined;border-right:1px solid #FFFFFF;border-bottom:1px solid #FFFFFF;border-left:1px solid #FFFFFF;padding-top:5px;padding-bottom:5px;font-family:'Roboto', sans-serif;text-align:center;mso-border-alt:none;word-break:keep-all;" target="_blank"><span style="padding-left:30px;padding-right:30px;font-size:14px;display:inline-block;letter-spacing:normal;"><span style="font-size: 16px; line-height: 2; word-break: break-word; mso-line-height-alt: 32px;"><strong><span data-mce-style="font-size: 14px; line-height: 28px;" style="font-size: 14px; line-height: 28px;">Download Invoice</span></strong></span></span></a>
+                                  <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="#" style="height:44px;width:178px;v-text-anchor:middle;" arcsize="82%" strokeweight="0.75pt" strokecolor="#FFFFFF" fill="false"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:'Roboto', sans-serif; font-size:14px"><![endif]--><a href="#" style="text-decoration:none;display:inline-block;color:#ffffff;background-color:transparent;border-radius:36px;width:auto;border-top:1px solid #FFFFFF;font-weight:undefined;border-right:1px solid #FFFFFF;border-bottom:1px solid #FFFFFF;border-left:1px solid #FFFFFF;padding-top:5px;padding-bottom:5px;font-family:'Roboto', sans-serif;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:30px;padding-right:30px;font-size:14px;display:inline-block;letter-spacing:normal;"><span style="font-size: 16px; line-height: 2; word-break: break-word; mso-line-height-alt: 32px;"><strong><span data-mce-style="font-size: 14px; line-height: 28px;" style="font-size: 14px; line-height: 28px;">Download Invoice</span></strong></span></span></a>
                                   <!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
                                 </div>
                               </td>
@@ -550,7 +550,7 @@
                           <table border="0" cellpadding="0" cellspacing="0" class="image_block" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
                             <tr>
                               <td style="padding-bottom:20px;padding-left:10px;padding-right:10px;padding-top:20px;width:100%;">
-                                <div align="center" style="line-height:10px"><img alt="Alternate text" src="images/border.png" style="display: block; height: auto; border: 0; width: 120px; max-width: 100%;" title="Alternate text" width="120" /></div>
+                                <div align="center" style="line-height:10px"><img alt="Border" src="https://i.ibb.co/m9mxHtP/border.png" style="display: block; height: auto; border: 0; width: 120px; max-width: 100%;" title="Border" width="120" /></div>
                               </td>
                             </tr>
                           </table>
@@ -574,7 +574,7 @@
                           <table border="0" cellpadding="0" cellspacing="0" class="image_block mobile_hide" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
                             <tr>
                               <td style="width:100%;padding-right:0px;padding-left:0px;">
-                                <div align="center" style="line-height:10px"><img alt="Side Ornaments" src="images/decoration-1.png" style="display: block; height: auto; border: 0; width: 150px; max-width: 100%;" title="Side Ornaments" width="150" /></div>
+                                <div align="center" style="line-height:10px"><img alt="Side Ornaments" src="https://i.ibb.co/J2XQ63V/decoration-1.png" style="display: block; height: auto; border: 0; width: 150px; max-width: 100%;" title="Decoration" width="150" /></div>
                               </td>
                             </tr>
                           </table>
@@ -608,7 +608,7 @@
                           <table border="0" cellpadding="0" cellspacing="0" class="image_block" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
                             <tr>
                               <td style="padding-bottom:10px;padding-top:10px;width:100%;padding-right:0px;padding-left:0px;">
-                                <div align="center" style="line-height:10px"><img alt="Discount Number" src="images/discount.png" style="display: block; height: auto; border: 0; width: 165px; max-width: 100%;" title="Discount Number" width="165" /></div>
+                                <div align="center" style="line-height:10px"><img alt="Discount Number" src="https://i.ibb.co/cNMzs81/discount.png" style="display: block; height: auto; border: 0; width: 165px; max-width: 100%;" title="Discount Number" width="165" /></div>
                               </td>
                             </tr>
                           </table>
@@ -642,7 +642,7 @@
                           <table border="0" cellpadding="0" cellspacing="0" class="image_block mobile_hide" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
                             <tr>
                               <td style="width:100%;padding-right:0px;padding-left:0px;">
-                                <div align="center" style="line-height:10px"><img alt="Side Ornaments" src="images/decoration-2.png" style="display: block; height: auto; border: 0; width: 150px; max-width: 100%;" title="Side Ornaments" width="150" /></div>
+                                <div align="center" style="line-height:10px"><img alt="Side Ornaments" src="https://i.ibb.co/qDC0wVs/decoration-2.png" style="display: block; height: auto; border: 0; width: 150px; max-width: 100%;" title="Decoration" width="150" /></div>
                               </td>
                             </tr>
                           </table>
@@ -663,28 +663,30 @@
                     <tbody>
                       <tr>
                         <td class="column column-1" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-left: 15px; padding-right: 15px; padding-top: 20px; padding-bottom: 20px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;" width="100%">
+                          <table border="0" cellpadding="20" cellspacing="0" class="text_block" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;" width="100%">
+                            <tr>
+                              <td>
+                                <div style="font-family: 'Roboto', sans-serif">
+                                  <div class="wrapper" style="font-size: 12px; mso-line-height-alt: 18px; color: #ffffff; line-height: 1.5; font-family: 'Roboto', sans-serif;">
+                                    <p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 18px;"><span style="font-size:18px;">Download free mobile application:</span></p>
+                                    <td style="padding:0 2px 0 2px;"><a href="#"><img alt="App Store" src="https://i.ibb.co/j4T5FK8/App-Store-Black.png" style="display: block; height: auto; border: 0;" title="linkedin" width="120" /></a></td>
+                                    <td style="padding:0 2px 0 2px;"><a href="#"><img alt="Google Play" src="https://i.ibb.co/KN1dwmm/Google-Play-Badge.png" style="display: block; height: auto; border: 0;" title="instagram" width="120" /></a></td
+                                  </div>
+                                </div>
+                              </td>
+                            </tr>
+                          </table>
                           <table border="0" cellpadding="10" cellspacing="0" class="social_block" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
                             <tr>
                               <td>
                                 <table align="center" border="0" cellpadding="0" cellspacing="0" class="social-table" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="144px">
                                   <tr>
-                                    <td style="padding:0 2px 0 2px;"><a href="https://www.facebook.com/"><img alt="Facebook" height="32" src="images/facebook.png" style="display: block; height: auto; border: 0;" title="facebook" width="32" /></a></td>
-                                    <td style="padding:0 2px 0 2px;"><a href="https://www.twitter.com/"><img alt="Twitter" height="32" src="images/twitter.png" style="display: block; height: auto; border: 0;" title="twitter" width="32" /></a></td>
-                                    <td style="padding:0 2px 0 2px;"><a href="https://www.linkedin.com/"><img alt="Linkedin" height="32" src="images/linkedin.png" style="display: block; height: auto; border: 0;" title="linkedin" width="32" /></a></td>
-                                    <td style="padding:0 2px 0 2px;"><a href="https://www.instagram.com/"><img alt="Instagram" height="32" src="images/instagram.png" style="display: block; height: auto; border: 0;" title="instagram" width="32" /></a></td>
+                                    <td style="padding:0 2px 0 2px;"><a href="#"><img alt="Facebook" height="32" src="https://i.ibb.co/X3tv9tB/facebook.png" style="display: block; height: auto; border: 0;" title="facebook" width="32" /></a></td>
+                                    <td style="padding:0 2px 0 2px;"><a href="#"><img alt="Twitter" height="32" src="https://i.ibb.co/WP3vs4P/twitter.png" style="display: block; height: auto; border: 0;" title="twitter" width="32" /></a></td>
+                                    <td style="padding:0 2px 0 2px;"><a href="#"><img alt="Linkedin" height="32" src="https://i.ibb.co/KqJhwhJ/linkedin.png" style="display: block; height: auto; border: 0;" title="linkedin" width="32" /></a></td>
+                                    <td style="padding:0 2px 0 2px;"><a href="#"><img alt="Instagram" height="32" src="https://i.ibb.co/gFTXBL5/instagram.png" style="display: block; height: auto; border: 0;" title="instagram" width="32" /></a></td>
                                   </tr>
                                 </table>
-                              </td>
-                            </tr>
-                          </table>
-                          <table border="0" cellpadding="10" cellspacing="0" class="text_block" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;" width="100%">
-                            <tr>
-                              <td>
-                                <div style="font-family: 'Roboto', sans-serif">
-                                  <div class="wrapper" style="font-size: 12px; mso-line-height-alt: 18px; color: #ffffff; line-height: 1.5; font-family: 'Roboto', sans-serif;">
-                                    <p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 18px;"><span style="font-size:12px;">Integer eget nibh vel massa gravida ullamcorper. Sed a viverra ante. Nullam posuere pellentesque lectus, nec vehicula felis rutrum ac.</span></p>
-                                  </div>
-                                </div>
                               </td>
                             </tr>
                           </table>
