logo and readme changes

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                         <td class="column column-1" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-left: 15px; padding-right: 15px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;" width="50%">
                           <table border="0" cellpadding="0" cellspacing="0" class="image_block" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
                             <tr>
-                              <td style="padding-bottom:25px;padding-left:20px;padding-right:20px;padding-top:25px;width:100%;">
-                                <a href="#" style="outline:none; line-height: 10px;" tabindex="-1"><img alt="Your Logo" src="https://i.ibb.co/WxCPGx2/yourlogo.png" style="display: block; height: auto; border: 0; width: 162px; max-width: 100%;" title="Logo" width="162" /></a>
+                              <td style="padding-bottom:0px;padding-left:0px;padding-right:0px;padding-top:0px;width:100%;">
+                                <a href="#" style="outline:none; line-height: 10px;" tabindex="-1"><img alt="Your Logo" src="https://i.ibb.co/6X5RMXF/invoice-logo-removebg-preview-1.png" style="display: block; height: auto; border: 0; width: 162px; max-width: 100%;" title="Logo" width="162" /></a>
                               </td>
                             </tr>
                           </table>
@@ -156,7 +156,7 @@
                           <table border="0" cellpadding="0" cellspacing="0" class="text_block" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;" width="100%">
                             <tr>
                               <td style="padding-bottom:15px;padding-left:10px;padding-right:10px;padding-top:10px;">
-                                <p class="wrapper" style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 18px; color: #ffffff; line-height: 1.5; font-family: 'Roboto', sans-serif"><span style="font-size:12px;">Cras sit amet lectus ante. Pellentesque dapibus convallis lacus.</span></p>
+                                <p class="wrapper" style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 18px; color: #ffffff; line-height: 1.5; font-family: 'Roboto', sans-serif"><span style="font-size:12px;">Unleash your street style with our urban wear.</span></p>
                               </td>
                             </tr>
                           </table>
